# gnina

./: CMakeLists.txt  README.md
gninasrc/main/: main.cpp
scripts/: deepdock.py  slurm.yaml
test/gnina/: CMakeLists.txt  test_daemon_protocol.py
